Fix task-list on mobile

--- a/src/main/public/stylesheets/components/_mobile.scss
+++ b/src/main/public/stylesheets/components/_mobile.scss
@@ -3,7 +3,7 @@
   display: none;
 }
 
-@media screen and (max-width: 480px) {
+@include media (mobile) {
   .mobile-hide {
     display: none;
   }
